# quick-copy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  config.example.yaml
docs/: index.html
src/: archive.rs  cli.rs  config.rs  main.rs  output.rs  resolve.rs  transfer.rs
src/commands/: dir.rs  doctor.rs  dump.rs  file.rs  ls.rs  mod.rs  pull.rs
